added repo to package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "author": "James Batt",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/place1/inversify-stereotype-decorators"
+  },
   "files": [
     "dist"
   ],
